Edited wiki page Screenshots through web user interface. add streamedmp Screenshots.

--- a/wiki/Screenshots.wiki
+++ b/wiki/Screenshots.wiki
@@ -2,22 +2,46 @@
 
 = Screen shots =
 <wiki:toc max_depth="2" />
-All of the following screen shots are taken from MP-TVSeries v2.1 using Blue3wide skin. All pieces of promotional artwork are copyrighted by their respective owners. 
+All of the following screen shots are taken from MP-TVSeries using Blue3wide skin & [http://www.team-mediaportal.com/extensions/widescreen/streamedmp StreamedMP] skin. All pieces of promotional artwork are copyrighted by their respective owners. 
+
 
 == Series Filmstrip Layout ==
+----
+
 http://mptvseries.googlecode.com/svn/wiki/Images/Blue3wide_Series_Filmstrip.jpg
+http://mptvseries.googlecode.com/svn/wiki/Images/Streamedmp_Series_Filmstrip.jpg
+
 
 == Series Wide Banners Layout ==
+----
+
 http://mptvseries.googlecode.com/svn/wiki/Images/Blue3wide_Series_WideBanners.jpg
+http://mptvseries.googlecode.com/svn/wiki/Images/Streamedmp_Series_WideBanners_thumb.jpg
+
 
 == Series List Posters Layout ==
+----
+
 http://mptvseries.googlecode.com/svn/wiki/Images/Blue3wide_Series_ListPoster.jpg
+http://mptvseries.googlecode.com/svn/wiki/Images/Streamedmp_Series_ListPoster.jpg
+
 
 == Season List Layout ==
+----
+
 http://mptvseries.googlecode.com/svn/wiki/Images/Blue3wide_Season_List.jpg
+http://mptvseries.googlecode.com/svn/wiki/Images/Streamedmp_Season_List.jpg
+
 
 == Episode View ==
+----
+
 http://mptvseries.googlecode.com/svn/wiki/Images/Blue3wide_Episode_Fanart.jpg
+http://mptvseries.googlecode.com/svn/wiki/Images/Streamedmp_Episode_Fanart.jpg
+
 
 == Fanart Chooser ==
+----
+
 http://mptvseries.googlecode.com/svn/wiki/Images/Blue3wide_Series_FanartChooser.jpg
+http://mptvseries.googlecode.com/svn/wiki/Images/Streamedmp_Series_FanartChooser.jpg
