--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -1,13 +1,17 @@
 #summary Frequently Asked Questions.
 
-= Introduction =
+=Integration with Social Media Websites =
 
-Add your content here.
+MP-TVSeries optionally integrates with the [http://follw.it follw.it] and [http://trakt.tv trakt.tv] websites, which are built around sharing with your friends what shows and movies you are into.
 
+One of the advantages to connecting to one or both of the sites is the syncronisation of your watch flags and ratings. This is useful if you have multiple htpcs, or need to start your tv series database from scratch and dont want to loose your watch flags.
 
-= Details =
+You can use either or both of the sites at the same time.
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+==Follw.it==
+
+ * From version 2.8.0+, you can configure follw.it from within the Plugin Configuration for MP-TVSeries, Select the follw.it tab, enter the login and password you created from the follw.it website.
+
+==Trakt.tv==
+
+ * From version 2.8.1+, the Trakt.tv supprt will be moved to its own process plugin called [http://http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-2-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
