--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -14,4 +14,4 @@ You can use either or both of the sites at the same time.
 
 ==Trakt.tv==
 
- * From version 2.8.1+, the Trakt.tv supprt will be moved to its own process plugin called [http://http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-2-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
+ * From version 2.8.1+, the Trakt.tv supprt will be moved to its own process plugin called [http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-2-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
