--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -8,26 +8,28 @@ One of the advantages to connecting to one or both of the sites is the syncronis
 
 You can use either or both of the sites at the same time.
 
-==Follw.it==
+==FOLLW.IT==
 
  * From version 2.8.0+, you can configure follw.it from within the Plugin Configuration for MP-TVSeries, Select the follw.it tab, enter the login and password you created from the follw.it website.
 
-===Installation===
+   ===Installation===
 
- * Load MP-TVSeries from Mediaportal Configuration, 
+ * Load MP-TVSeries from Mediaportal Configuration, Plugins.
  * Click _Follw.it Tab_
  * Click _Setup Account_
  * Follow the OnScreen instructions
+ http://mptvseries.googlecode.com/svn/wiki/Images/FollwitConfig.jpg
    
 
-==Trakt.tv==
+==TRAKT.TV==
 
  * From version 2.8.1+, the Trakt.tv supprt will be moved to its own process plugin called [http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-2-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
 
 
-===Installation===
+   ===Installation===
 
- * Load MP-TVSeries from Mediaportal Configuration, 
+ * Load Mediaportal Configuration, Plugins.
  * Load _Trakt_ which is under 'Process Plugins'
  * Type in your trakt.tv username and password
  * Click OK
+ http://mptvseries.googlecode.com/svn/wiki/Images/TraktConfig.jpg
