--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -35,3 +35,31 @@ You can use either or both of the sites at the same time.
  * Type in your trakt.tv username and password
  * Click OK
  http://mptvseries.googlecode.com/svn/wiki/Images/TraktConfig.jpg
+
+=File Naming Conventions=
+MP-TVSeries supports various naming conventions, if you want a perfect match without any user interaction, its best to name and name the series as it is shown on thetvdb.com. 
+
+ ==Examples of Supported Filenames==
+Here are a few random examples which will parse.
+ *Alias.S01E01.avi
+ *Alias - S01E01 - Pilot.avi
+ *Alias.1x1.avi
+ *Alias - 1x1 - Pilot.avi
+ *Alias 01x01.mkv
+
+ ==Series with Specials==
+Specials need to be labeled as Season 0, Lets take Top Gear Polar Special for example, Find Top Gear on thetvdb and click on [http://www.thetvdb.com/?tab=season&seriesid=74608&seasonid=22070&lid=7 Specials]. We can see in the Specials list, its labeled as Episode 49, so a filename for that could be
+ *Top Gear - S00E49 - Polar Special
+
+ ==Auto Renaming of Files==
+Unfortunatly MP-TVSeries does not currently support the auto renaming of your files. However their are free 3rd party tools such as [http://www.theRenamer.com TheRenamer] and [http://www.tvrename.com Tv Rename] which can do that for you. 
+
+ ==Folder Structure==
+There are many variations you could use, below is a way i reccomend as it works well with the renaming tools above. 
+->TV
+--> Series Name  (as shown at thetvdb)
+---> Season # (where # is the season number as shown at thetvdb)
+
+The reason i have shown the structure above is it works well for the autorename tools mentioned above
+
+
