--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -12,9 +12,9 @@ You can use either or both of the sites at the same time.
 
 ==Follw.it==
 
- * From version 2.8.0+, you can configure follw.it from within the Plugin Configuration for MP-TVSeries, Select the follw.it tab, enter the login and password you created from the follw.it website.
+ * From version 2.8.0+, you can configure follw.it from within the Plugin Configuration for MP-TVSeries
 
-   ===Installation===
+   ===Configuration===
 
  * Load MP-TVSeries from Mediaportal Configuration, Plugins.
  * Click _Follw.it Tab_
@@ -28,7 +28,7 @@ You can use either or both of the sites at the same time.
  * From version 2.8.1+, the Trakt.tv supprt will be moved to its own process plugin called [http://forum.team-mediaportal.com/mediaportal-plugins-47/0-9-2-0-trakt-mediaportal-94872/ Trakt for Mediaportal]. This plugin will be included with the MP-TVSeries installer should you wish to install it.
 
 
-   ===Installation===
+   ===Configuration===
 
  * Load Mediaportal Configuration, Plugins.
  * Load _Trakt_ which is under 'Process Plugins'
