--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -80,6 +80,14 @@ Here are a few random examples which will parse.
  ==Series with Specials==
 Specials need to be labeled as Season 0, Lets take Top Gear Polar Special for example, Find Top Gear on thetvdb and click on [http://www.thetvdb.com/?tab=season&seriesid=74608&seasonid=22070&lid=7 Specials]. We can see in the Specials list, its labeled as Episode 49, so a filename for that could be
  * Top Gear - S00E49 - Polar Special
+ 
+ ==Re-imagined Series==
+If you have a series which has been re-imagined, lets take Battlestar Galatica for example, there is the Original, a 1980's version and a 2003 version, How do you name these? go to thetvdb.com, search Battlestar Galatica. We need to name our files the same way. note each series has a different show id comfirming they are all different series
+ http://mptvseries.googlecode.com/svn/wiki/Images/TvdbBSGExample.jpg
+
+ * Battlestar Galactica  - S01E01.avi  this will match as the original series
+ * Battlestar Galactica (1980) - S01E01.avi  this will match as the 1980's Series
+ * Battlestar Galactica (2003) - S01E01.avi  this will match as the 2003 version.
 
  ==Auto Renaming of Files==
 MP-TVSeries does not currently support the auto renaming of your files. However their are free 3rd party tools such as [http://www.theRenamer.com TheRenamer] and [http://www.tvrename.com Tv Rename] 
