--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -122,7 +122,7 @@ Following the location of the files used my TVSeries, should you need to backup 
   * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\MediaPortal\thumbs
   * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\MediaPortal\thumbs
 
- ===MP-TVSeries.log==
+ ==MP-TVSeries.log==
  This file contains a log of activities in the MP-TVSeries plugin, which is useful for diagnostic purposes
   * *XP*  C:\Documents and Settings\All Users\Application Data\Team MediaPortal\MediaPortal\log
   * *Vista & Windows 7*  C:\ProgramData\Team MediaPortal\MediaPortal\log
